# crash-handling

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  deny.toml  release.toml
.cargo/: config.toml
.github/workflows/: rust-ci.yml
crash-context/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crash-context/src/: lib.rs  linux.rs  mac.rs  windows.rs
crash-context/src/linux/: fill.rs  getcontext.rs
crash-context/src/linux/getcontext/: arm.rs  loongarch64.rs  riscv64.rs  s390x.rs  x86_64.rs
crash-context/src/mac/: guard.rs  ipc.rs  resource.rs
crash-context/src/windows/: ffi.rs
crash-context/src/windows/ffi/: x86.rs  x86_64.rs
crash-handler/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crash-handler/src/: error.rs  lib.rs  linux.rs  mac.rs  unix.rs  windows.rs
crash-handler/src/linux/: jmp.rs  state.rs
crash-handler/src/mac/: ffi.rs  jmp.rs  signal.rs  state.rs
crash-handler/src/unix/: pthread_interpose.rs
crash-handler/src/windows/: jmp.rs  signal.rs  state.rs
crash-handler/tests/: abort.rs  bus.rs  fpe.rs  guard.rs  heap_corruption.rs  illegal.rs  invalid_param.rs  purecall.rs  segv.rs  shared.rs  stack_overflow.rs  stack_overflow_pthread.rs  trap.rs
crash-handler/tests/shared/: mod.rs
exception-handler/: Cargo.toml
exception-handler/src/: error.rs  lib.rs  linux.rs  mac.rs  unix.rs  windows.rs
exception-handler/src/linux/: jmp.rs  state.rs
exception-handler/src/mac/: ffi.rs  jmp.rs  signal.rs  state.rs
exception-handler/src/unix/: pthread_intercept.rs  pthread_interpose.rs
exception-handler/src/windows/: jmp.rs  state.rs
exception-handler/tests/: abort.rs  bus.rs  fpe.rs  illegal.rs  invalid_param.rs  purecall.rs  segv.rs  shared.rs  stack_overflow.rs  stack_overflow_pthread.rs  trap.rs
exception-handler/tests/shared/: mod.rs  unix.rs  window.rs
minidumper/: CHANGELOG.md  Cargo.toml  README.md  release.toml
minidumper-test/: Cargo.toml
minidumper-test/crash-client/: Cargo.toml
minidumper-test/crash-client/src/: main.rs
minidumper-test/src/: bin.rs  crash-client.rs  crash-server.rs  lib.rs  main.rs
minidumper-test/tests/: abort.rs  bus.rs  fpe.rs  illegal.rs  macos.rs  segfault.rs  stack_overflow.rs  trap.rs  windows.rs
minidumper/examples/: diskwrite.rs
minidumper/src/: errors.rs  ipc.rs  lib.rs  linux.rs  mac.rs  windows.rs
minidumper/src/ipc/: client.rs  mac.rs  server.rs  windows.rs
minidumper/src/linux/: client.rs  server.rs
minidumper/src/mac/: client.rs  server.rs  uds.rs
minidumper/src/windows/: client.rs  server.rs  uds.rs
minidumper/tests/: ipc.rs
sadness-generator/: CHANGELOG.md  Cargo.toml  build.rs  release.toml
sadness-generator/src/: bindings.toml  lib.rs  sadness.c  win_bindings.rs
uctx/: Cargo.toml  build.rs
uctx/libunwind/: README.md
uctx/libunwind/x86_64/: getcontext.S  ucontext_i.h
uctx/src/: lib.rs
