[workspace]
resolver = "2"
members = [
    "crash-context",
    "crash-handler",
    "minidumper",
    "minidumper-test",
    "sadness-generator",
]

[workspace.package]
repository = "https://github.com/EmbarkStudios/crash-handling"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[profile.dev]
debug = 2

[workspace.dependencies]
cfg-if = "1.0"
crash-context = "0.6"
libc = "0.2"
mach2 = "0.4"
parking_lot = "0.12"
