[package]
name = "crash-context"
description = "Provides types containing target specific contextual information during an exception"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[features]
# If enabled, adds support for filling out the target specific CPU context
# from a crash context
fill-minidump = ["minidump-common", "scroll"]

[dependencies]
cfg-if = "1.0"
minidump-common = { version = "0.10", optional = true }
scroll = { version = "0.11", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
