[package]
name = "crash-context"
version = "0.0.2"
description = "Provides portable types containing target specific contextual information at the time of an exception"
repository = "https://github.com/EmbarkStudios/crash-handling"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/crash-context"
homepage = "https://github.com/EmbarkStudios/crash-context"
categories = ["external-ffi-bindings"]
keywords = ["crash", "libc", "getcontext"]
rust-version = "1.59.0" # We use global_asm!

[dependencies]
cfg-if = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.34"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
]
