[package]
name = "crash-context"
version = "0.6.3"
description = "Provides portable types containing target specific contextual information at the time of a crash"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/crash-context"
homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/crash-context"
categories = ["external-ffi-bindings"]
keywords = ["crash", "libc", "getcontext"]
rust-version.workspace = true

[dependencies]
# Nicer cfg handling
cfg-if.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# provides bindings to mach specifics
mach2.workspace = true
