[package]
name = "crash-handler"
description = "Allows running of user code during crash events"
repository = "https://github.com/EmbarkStudios/crash-handling"
version = "0.3.2"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/crash-handler"
homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/crash-handler"
keywords = ["breakpad", "minidump", "crash", "signal", "exception"]

[features]
default = []
# If enabled, will log out information when a signal is raised/exception thrown
# but logged in a manner that is safe.
debug-print = []

[dependencies]
# Nicer handling of complex cfg expressions
cfg-if = "1.0"
# Definition of a portable crash-context that can be shared between various
# crates
crash-context = "0.3"
# Wrapper around libc
libc = "0.2"
# Nicer sync primitives
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.36" # Keep aligned with parking_lot & minidump-writer
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
]

[target.'cfg(target_os = "macos")'.dependencies]
# Bindings to MacOS specific APIs that are used. Note we don't use the `mach`
# crate as it is unmaintained
mach2 = "0.4"

[dev-dependencies]
sadness-generator = { path = "../sadness-generator" }
