[package]
name = "exception-handler"
description = "Allows running of user code during exceptional events"
repository = "https://github.com/EmbarkStudios/crash-handling"
version = "0.0.1"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/exception-handler"
homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/exception-handler"
keywords = ["breakpad", "minidump", "crash", "signal", "exception"]

[features]
default = []
# If enabled, will log out information when a signal is raised/exception thrown
# but logged in a manner that is safe.
debug-print = []

[dependencies]
# Nicer handling of complex cfg expressions
cfg-if = "1.0"
# Nicer sync primitives
parking_lot = "0.11"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
# Wrapper around libc
libc = "0.2"
# Portable ucontext replacement, particularly for musl
uctx = { path = "../uctx" }

[build-dependencies]
# We use https://github.com/kaniini/libucontext to provide a full ucontext implementation
# that also works when targetting musl, but it's C and asm so we need to build it
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
sadness-generator = { path = "../sadness-generator" }
setjmp = "0.1"
