[package]
name = "exception-handler"
description = "Allows running of user code during exceptional events"
repository = "https://github.com/EmbarkStudios/crash-handling"
version = "0.0.1"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/exception-handler"
homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/exception-handler"
keywords = ["breakpad", "minidump", "crash", "signal", "exception"]

[features]
default = []
# If enabled, will log out information when a signal is raised/exception thrown
# but logged in a manner that is safe.
debug-print = []

[dependencies]
# Nicer handling of complex cfg expressions
cfg-if = "1.0"
# Definition of a portable crash-context that can be shared between various
# crates
crash-context = { version = "0.0.3", path = "../crash-context" }
# Wrapper around libc
libc = "0.2"
# Nicer sync primitives
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.34"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
]

[dev-dependencies]
sadness-generator = { path = "../sadness-generator" }
