[package]
name = "minidumper-test"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "minidumper-test"

[[bin]]
name = "crash-client"
path = "crash-client/src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cfg-if = "1.0"
crash-handler = { path = "../crash-handler" }
minidump = "0.25"
minidump-common = "0.25"
minidumper = { path = "../minidumper" }
# This has some crazy dependencies, can enable manually if needed
#notify-rust = "4.5"
rayon = "1.5"
sadness-generator = { path = "../sadness-generator" }
tracing-subscriber = { version = "0.3" }

[package.metadata.release]
release = false
