[package]
name = "minidumper"
version = "0.4.0"
description = "IPC impl for creating a minidump for a crashed process"
repository = "https://github.com/EmbarkStudios/crash-handling"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/minidumper"
homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/minidumper"
# Unfortunately there is no good category for this on crates.io atm
categories = ["os"]
keywords = ["crash", "minidump", "ipc", "out-of-process"]

[dependencies]
# Nicer cfg handling
cfg-if = "1.0"
crash-context = { version = "0.3", path = "../crash-context" }
libc = "0.2"
# Basic log emitting
log = "0.4"
# Minidump writing
minidump-writer = "0.3"
# Event loop
polling = "2.2"
# Nicer locking primitives
parking_lot = "0.12"
# Nicer error creation
thiserror = "1.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
# Improved Unix domain socket support, includes features that are not available in std
uds = "0.2.6"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
# Nicer binary interop
scroll = "0.11"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.36" # Keep aligned with parking_lot & minidump-writer & crash-handler
features = [
    "Win32_Foundation",         # Core types eg HANDLE
    "Win32_Networking_WinSock", # Sockets
    "Win32_System_IO",          # Sockets
    "Win32_System_Threading",   # OpenProcess
]

[dev-dependencies]
# Diskwrite example
crash-handler = { path = "../crash-handler" }
# uuid generation
uuid = { version = "1.0", features = ["v4"] }
backtrace = "0.3"
