[package]
name = "sadness-generator"
version = "0.4.0"
description = "Provides various ways to make your program sad"
repository = "https://github.com/EmbarkStudios/crash-handling"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sadness-generator"
homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/sadness-generator"
# Unfortunately there is no good category for this on crates.io atm,
# so we use simulation, the simulation is so good it's real!
categories = ["simulation"]
keywords = ["crash", "sadness", "signal", "exception"]
# We use `asm!`
rust-version = "1.59.0"

[dependencies]
libc = "0.2"
