[package]
name = "sadness-generator"
version = "0.7.0"
description = "Provides various ways to make your program sad"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/sadness-generator"
homepage = "https://github.com/EmbarkStudios/crash-handling/tree/main/sadness-generator"
# We use `asm!` and rawdylib Windows bindings
rust-version.workspace = true
# Unfortunately there is no good category for this on crates.io atm,
# so we use simulation, the simulation is so good it's real!
categories = ["simulation"]
keywords = ["crash", "sadness", "signal", "exception"]

[dependencies]
libc.workspace = true
